<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:title="@string/search"
        android:icon="@android:drawable/ic_menu_search"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="androidx.appcompat.widget.SearchView" />

    <item
        android:id="@+id/action_dark_mode"
        android:title="@string/dark_mode"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_light_mode"
        android:title="@string/light_mode"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_logout"
        android:title="@string/log_out"
        app:showAsAction="never" />
</menu>