<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/card_background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="40dp"
        android:paddingBottom="24dp">
        <ImageView
        android:id="@+id/iv_menu_profile"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:src="@drawable/pic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_menu_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="24dp"
            android:text="@string/user_name"
            android:textColor="@color/text_primary"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/iv_menu_profile"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/iv_menu_profile"
            app:layout_constraintTop_toTopOf="@id/iv_menu_profile" />

        <View
            android:id="@+id/v_divider_1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="24dp"
            android:background="@color/screen_background"
            app:layout_constraintTop_toBottomOf="@id/iv_menu_profile" />

        <TextView
            android:id="@+id/menu_home"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:paddingHorizontal="24dp"
            android:paddingVertical="16dp"
            android:text="@string/home"
            android:textColor="@color/text_primary"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/v_divider_1" />

        <TextView
            android:id="@+id/menu_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:paddingHorizontal="24dp"
            android:paddingVertical="16dp"
            android:text="@string/profile"
            android:textColor="@color/text_primary"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/menu_home" />

        <View
            android:id="@+id/v_divider_2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginVertical="8dp"
            android:background="@color/screen_background"
            app:layout_constraintTop_toBottomOf="@id/menu_profile" />

        <TextView
            android:id="@+id/menu_dark_mode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:paddingHorizontal="24dp"
            android:paddingVertical="16dp"
            android:text="@string/dark_mode"
            android:textColor="@color/text_primary"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/v_divider_2" />

        <TextView
            android:id="@+id/menu_light_mode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:paddingHorizontal="24dp"
            android:paddingVertical="16dp"
            android:text="@string/light_mode"
            android:textColor="@color/text_primary"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/menu_dark_mode" />

<!--        <TextView-->
<!--            android:id="@+id/menu_language"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:background="?attr/selectableItemBackground"-->
<!--            android:clickable="true"-->
<!--            android:focusable="true"-->
<!--            android:paddingHorizontal="24dp"-->
<!--            android:paddingVertical="16dp"-->
<!--            android:text="@string/language"-->
<!--            android:textColor="@color/text_primary"-->
<!--            android:textSize="16sp"-->
<!--            app:layout_constraintTop_toBottomOf="@id/menu_light_mode" />-->

        <View
            android:id="@+id/v_divider_3"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginVertical="8dp"
            android:layout_marginTop="112dp"
            android:background="@color/screen_background"
            app:layout_constraintTop_toBottomOf="@id/menu_dark_mode"
            tools:layout_editor_absoluteX="0dp" />

        <TextView
            android:id="@+id/menu_logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:paddingHorizontal="24dp"
            android:paddingVertical="16dp"
            android:text="@string/log_out"
            android:textColor="#D32F2F"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/v_divider_3"
            app:layout_constraintVertical_bias="0.125"
            tools:layout_editor_absoluteX="0dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>